--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,21 +10,6 @@
     tools:showIn="@layout/app_bar_main">
 
     <FrameLayout
-        android:id="@+id/fab_frag_container"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:background="@android:color/background_light"
-        android:clickable="true"
-        android:foregroundGravity="top"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detail_frag_container">
-
-    </FrameLayout>
-
-    <FrameLayout
         android:id="@+id/frag_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -38,30 +23,26 @@
     <ImageButton
         android:id="@+id/btn_main_close"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="206dp"
+        android:layout_height="16dp"
         android:background="@color/cardview_dark_background"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/detail_frag_container"
-        app:layout_constraintEnd_toStartOf="@+id/detail_frag_container"
-        app:layout_constraintStart_toStartOf="@+id/detail_frag_container"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_keyboard_arrow_up_24dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detail_frag_container"
+        app:srcCompat="@drawable/ic_keyboard_arrow_up_24dp"
+        android:contentDescription="Close button" />
 
     <FrameLayout
         android:id="@+id/detail_frag_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="205dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginStart="180dp"
         android:background="@android:color/background_light"
         android:clickable="true"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/fab_frag_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_main_close">
+        app:layout_constraintTop_toTopOf="parent"
+        android:focusable="true">
 
     </FrameLayout>
 
@@ -72,18 +53,33 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="32dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/circle"
+        android:layout_marginRight="32dp"
+        android:focusable="true" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:clickable="true"
-            app:srcCompat="@drawable/circle" />
+    <FrameLayout
+        android:id="@+id/fab_frag_container"
+        android:layout_width="0dp"
+        android:layout_height="140dp"
+        android:layout_marginBottom="24dp"
+        android:background="@android:color/background_light"
+        android:clickable="true"
+        android:foregroundGravity="top"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:focusable="true">
+
     </FrameLayout>
 
 
