--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -61,9 +61,10 @@
         android:layout_marginEnd="32dp"
         android:clickable="true"
         android:focusable="true"
+        android:visibility="gone"
+        app:backgroundTint="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toEndOf="parent"
-        app:backgroundTint="@android:color/darker_gray"
         app:srcCompat="@android:drawable/ic_dialog_map" />
 
     <android.support.design.widget.FloatingActionButton
@@ -74,6 +75,7 @@
         android:layout_marginEnd="32dp"
         android:clickable="true"
         android:focusable="true"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/circle" />
