--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2C0909</color>
+    <color name="colorPrimary">#030410</color>
     <color name="colorPrimaryDark">#030410</color>
     <color name="colorAccent">#E30059</color>
 
